@startuml HaomaiWMS_ER_Diagram

' Configuración de estilo
skinparam endpoint {
  BackgroundColor White
  BorderColor Black
}

' Entidades Principales



entity "products" as products {
  *id : INT <<PK>>
  --
  sku : VARCHAR
  name : VARCHAR
  category : VARCHAR
  capacity : VARCHAR
  unit : VARCHAR
  brand : VARCHAR
  packWholesale : INT
  description : TEXT
  image : VARCHAR
  dueDate : DATE
  flagDiscontinued : BOOLEAN
  flagActive : BOOLEAN
  --
  *businessId : UUID <<FK>>
}

entity "warehouse" as warehouse {
  *id : INT <<PK>>
  --
  name : VARCHAR
  --

}

' Lotes de Productos
entity "lots" as lots {
  *id : INT <<PK>>
  --
  expiryDate : DATE
  receivedDate : DATE
  status : VARCHAR (PENDING, RECEIVED, EXPIRED)
  createdAt : DATETIME
  --
  *productId : INT <<FK>>
  *warehouseId : INT <<FK>>
}

' Múltiples Barcodes por Producto
entity "product_barcodes" as product_barcodes {
  *id : INT <<PK>>
  --
  barcode : VARCHAR (UNIQUE)
  type : VARCHAR (UNIT, PACK)
  isPrimary : BOOLEAN
  createdAt : DATETIME
  --
  *productId : INT <<FK>>
}

' Relación N:M entre Pack Barcodes y Unit Barcodes
entity "barcode_pack_contents" as barcode_pack_contents {
  *id : INT <<PK>>
  --
  quantity : INT
  --
  *packBarcodeId : INT <<FK>>
  *unitBarcodeId : INT <<FK>>
}

' Snapshot de Stock (Vista Materializada)
entity "stockSnapshot" as stockSnapshot {
  *id : INT <<PK>>
  --
  quantity : DECIMAL
  lastMovementId : BIGINT
  updatedAt : DATETIME
  --
  *productId : INT <<FK>>
  *warehouseId : INT <<FK>>
  *lotId : INT <<FK>>
}

' Historial de Movimientos (Source of Truth)
entity "stockLogs" as stockLogs {
  *id : BIGINT <<PK>>
  --
  date : DATETIME
  type : VARCHAR (IN, OUT, ADJUST, TRANSFER)
  quantityDelta : DECIMAL
  description : TEXT
  --
  *productId : INT <<FK>>
  *warehouseId : INT <<FK>>
  *lotId : INT <<FK>>
  *userId : INT <<FK>>
  orderId : INT <<FK>>
}

entity "orders" as orders {
  *id : INT <<PK>>
  --
  requestId : INT
  date : DATE
  time : TIME
  status : VARCHAR
  flagInOut : BOOLEAN (0=Ingreso, 1=Egreso)
  --

  *userId : INT <<FK>>
}

entity "inbound_orders" as inbound_orders {
  *id : INT <<PK>>
  --
  *orderId : INT <<FK>>
  *supplierId : INT <<FK>>
}

entity "outbound_orders" as outbound_orders {
  *id : INT <<PK>>
  --
  *orderId : INT <<FK>>
  *customerId : INT <<FK>>
}

entity "orderDetails" as orderDetails {
  *id : INT <<PK>>
  --
  quantity : DECIMAL
  pack : INT
  itemPrice : DECIMAL
  productName : VARCHAR
  productSku : VARCHAR
  --
  *orderId : INT <<FK>>
  *productId : INT <<FK>>
  *lotId : INT <<FK>>
}

entity "suppliers" as suppliers {
  *id : INT <<PK>>
  --
  businessName : VARCHAR
  taxId : VARCHAR
  address : VARCHAR
  phone : VARCHAR
  email : VARCHAR
  --

}

entity "customers" as customers {
  *id : INT <<PK>>
  --
  businessName : VARCHAR
  taxId : VARCHAR
  address : VARCHAR
  phone : VARCHAR
  email : VARCHAR
  --

}

entity "users" as users {
  *id : INT <<PK>>
  --
  fullName : VARCHAR
  email : VARCHAR
  role : VARCHAR (SUPER_ADMIN, ADMIN, REPOSITOR)
  avatar : VARCHAR
  --

}

entity "userLog" as userLog {
  *id : INT <<PK>>
  --
  userLogDate : DATE
  userLogTime : TIME
  module : VARCHAR
  description : TEXT
  --
  *userId : INT <<FK>>
}

entity "translations" as translations {
  *id : INT <<PK>>
  --
  message : VARCHAR
  english : VARCHAR
  spanish : VARCHAR
  portuguese : VARCHAR
  chinese : VARCHAR
  japanese : VARCHAR
  korean : VARCHAR
}



' Lotes
products ||..o{ lots : "tiene lotes"
warehouse ||..o{ lots : "almacena lotes"

' Barcodes
products ||..o{ product_barcodes : "tiene barcodes"
product_barcodes ||..o{ barcode_pack_contents : "pack contiene"
product_barcodes ||..o{ barcode_pack_contents : "unit incluido en"

' Stock Snapshot
lots ||..o{ stockSnapshot : "tiene snapshot"
warehouse ||..o{ stockSnapshot : "almacena"
products ||..o{ stockSnapshot : "tiene stock en"

' Stock Logs (Source of Truth)
lots ||..o{ stockLogs : "registra en"
warehouse ||..o{ stockLogs : "registra historial en"
products ||..o{ stockLogs : "tiene historial de"
users ||..o{ stockLogs : "ejecuta movimiento"
orders ||..o{ stockLogs : "genera movimiento"

' Order Details con Lote
lots ||..o{ orderDetails : "usado en"

' Pedidos Generales
orders ||..o{ orderDetails : "contiene"
products ||..o{ orderDetails : "listado en"
users ||..o{ orders : "crea/gestiona"

' Desglose de Pedidos (Ingresos vs Egresos)
orders ||--|| inbound_orders : "es un"
orders ||--|| outbound_orders : "es un"

inbound_orders }o..|| suppliers : "proveído por"
outbound_orders }o..|| customers : "destinado a"

' Auditoría
users ||..o{ userLog : "tiene actividad"

@enduml

